feat: implement server-side pagination and custom validation handling