@@ -3,12 +3,17 @@ package com.arthursena.fin_track.service;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort.Direction;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import com.arthursena.fin_track.model.Transaction;
 import com.arthursena.fin_track.model.User;
+import com.arthursena.fin_track.model.dto.PageTransactionResponse;
 import com.arthursena.fin_track.model.dto.TransactionResponse;
 import com.arthursena.fin_track.model.enums.TransactionType;
 import com.arthursena.fin_track.repository.TransactionRepository;
@@ -22,9 +27,12 @@ public class TransactionService {
         this.transactionRepository = transactionRepository;
     }
 
-    public List<TransactionResponse> findAllTransactions() {
+    public PageTransactionResponse findAllTransactions(int page, int size) {
         User user = getCurrentUser();
-        return transactionRepository.findByUser(user).stream().map(TransactionResponse::new).toList().reversed();
+        Page<Transaction> transactionsPage = transactionRepository.findByUser(user, PageRequest.of(page, size, Direction.DESC, "createdAt"));
+        List<TransactionResponse> transactions = transactionsPage.get().map(TransactionResponse::new).collect(Collectors.toList());
+        
+        return new PageTransactionResponse(transactions, transactionsPage.getNumber(), transactionsPage.getSize(), transactionsPage.getTotalElements());
     }
 
     public Optional<TransactionResponse> findTransactionById(String id) {
@@ -70,17 +78,11 @@ public class TransactionService {
     public BigDecimal calculateBalance() {
         User user = getCurrentUser();
 
-        List<Transaction> transactions = transactionRepository.findByUser(user);
-        
-        BigDecimal revenues = transactions.stream()
-            .filter(t -> t.getTransactionType() == TransactionType.REVENUE)
-            .map(Transaction::getAmount)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
-        BigDecimal expenses = transactions.stream()
-            .filter(t -> t.getTransactionType() == TransactionType.EXPENSE)
-            .map(Transaction::getAmount)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal totalRevenues = transactionRepository.sumAmountByUserAndTransactionType(user, TransactionType.REVENUE);
+        BigDecimal totalExpenses = transactionRepository.sumAmountByUserAndTransactionType(user, TransactionType.EXPENSE);
+
+        BigDecimal revenues = totalRevenues != null ? totalRevenues : BigDecimal.ZERO;
+        BigDecimal expenses = totalExpenses != null ? totalExpenses : BigDecimal.ZERO;
 
         return revenues.subtract(expenses);
     }
